--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">learn-japanese</string>
-    <string name="title_activity_main">learn-japanese</string>
+    <string name="app_name">Japanese Skill</string>
+    <string name="title_activity_main">Japanese Skill</string>
     <string name="package_name">io.ionic.starter</string>
     <string name="fileprovider_authority">io.ionic.starter.fileprovider</string>
     <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="fb_app_id">673913583068118</string>
+    <string name="fb_app_name">Japanese Skill</string>
 </resources>
